Fixed a bug where textbox won't appear on iphone and ipad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,10 @@ main {
     width: 100%;
 }
 
+#name-input {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* Combat Log */
 .logBox {
     margin: 0.5rem;
